--- a/Alumni-Conncet-Frontend/package.json
+++ b/Alumni-Conncet-Frontend/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
+    "pdfjs-dist": "^5.4.449",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
