Added open_resume essentials
Signed-off-by: Yash Suthar <yashsuthar983@gmail.com>

--- a/Alumni-Connect-backend/.gitignore
+++ b/Alumni-Connect-backend/.gitignore
@@ -74,6 +74,8 @@ frontend/build/
 frontend/dist/
 frontend/.next/
 
+# Ignore open_resume node_modules
+open_resume/node_modules/
 
 # Ignore uploaded files
 uploads/
