--- a/Alumni-Conncet-Frontend/package.json
+++ b/Alumni-Conncet-Frontend/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "pdfjs-dist": "^5.4.449",
@@ -32,6 +32,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
