--- a/Alumni-Conncet-Frontend/package.json
+++ b/Alumni-Conncet-Frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.66.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
