--- a/Alumni-Connect-backend/pom.xml
+++ b/Alumni-Connect-backend/pom.xml
@@ -97,6 +97,11 @@
 			<artifactId>google-api-client-jackson2</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.17</version>
+		</dependency>
 
 		<!-- Other utilities -->
 		<dependency>
